Port to 26.1.2 (PART 1)
1043 errors left